fix: image grid alignments

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -276,8 +276,10 @@ img[lazy="loaded"]
       align-self: flex-end
     li:nth-child(3)
       width: calc(100% / 3)
+      align-self: flex-start
     li:nth-child(4)
       width: calc((100% / 3) * 2)
+      align-self: flex-start
     li:nth-child(5)
       width: calc(100% / 3)
       align-self: flex-end
@@ -289,6 +291,7 @@ img[lazy="loaded"]
       align-self: flex-end
     li:nth-child(8)
       width: calc((100% / 3) * 2)
+      align-self: flex-start
     li:nth-child(9)
       width: calc(100% / 3)
       align-self: flex-end
